--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
