--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
+    "mongoose": "^8.1.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
