--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.1.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
-    "passport": "^0.7.0",
+    "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
