--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
     "cookie-session": "^2.1.0",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.3",
     "passport": "^0.5.3",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^15.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
